few more css tweaks

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -47,10 +47,9 @@
   </section>
 
   <section class="main">
-    <h1 id="repair">Computer &amp; Laptop Repair | Data Recovery & Spyware, Virus Removal</h1>
+    <h1 id="repair" class="initial-char-limit-25">Computer &amp; Laptop Repair, Data Recovery, Spyware, Virus Removal</h1>
 
-    <h2>ACE Computer Manchester NH<br />
-      Computer Network Specialists</h2>
+    <h2 class="initial-char-limit-25">ACE Computer Manchester NH Computer Network Specialists</h2>
     <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair &amp; maintain your computers &amp; network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request &amp; dispatching a professional, friendly, qualified service technician to get you up &amp; running quickly.</p>
 
     <h2>What Makes ACE Computer Different?</h2>
@@ -90,8 +89,8 @@
     <h2>Free In-Store Consultation &amp; Estimate</h2>
     <p class="last">That's right. Your in-store consultation is free. Our technicians have an average of 10+ years of experience in the computer repair field, and can sort out your computer problems so that they're working as needed.</p>
 
-    <h2 id="spyware" class="g-icon"><span class="material-symbols-outlined">bug_report</span>Computer Spyware Removal</h2>
-    <p>It is important to keep your computer data secure and safe. Having up to date Virus Protection Software is one of the most important responsibilities of safe, trouble free computing. Without virus protection, viruses can destroy data, disclose data, replicate itself to friends, and render your computer unusable.</p>
+    <h2 id="spyware" class="g-icon"><span class="material-symbols-outlined">bug_report</span>Spyware Removal</h2>
+    <p>It is important to keep your computer data safe &amp; secure. Having up to date Virus Protection Software is one of the most important responsibilities of safe, trouble free computing. Without virus protection, viruses can destroy data, disclose data, replicate itself to friends, and render your computer unusable.</p>
     <p>If you suspect your computer system is infected with a virus and you have virus protection software installed, it is recommended that you update that software and run a full system scan. If your system has a virus and you can't get rid of it, our technicians can remove it and restore any files needed to get your system up and running.</p>
     <p class="last">We also sell &amp; install the latest Virus Protection Software.</p>
 
@@ -122,7 +121,7 @@
     <h3>Storage & Content Networking</h3>
     <p class="last">Develop a storage strategy and content network architecture to meet your business needs and reduce the stress on your storage servers and network.</p>
 
-    <h2>Computer Upgrades and Maintenance</h2>
+    <h2>Computer Upgrades &amp; Maintenance</h2>
     <p>While we're at your office(s), we can also study your existing computer systems, consult with you to find out what your company needs to function efficiently, and deliver a proposal &amp; estimate designed to improve your system (if required) based upon what is needed for your specific needs.</p>
     <p>Find out about our Proactive Service &amp; Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in their proper running condition.</p>
 
