add internal links

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -58,11 +58,11 @@
     <p>Here is a list of services that we can offer you and your company:</p>
 
     <ul class="about-list">
-      <li>Expert network design, installation, &amp; support.</li>
+      <li><a href="#networks">Expert network design, installation, &amp; support</a>.</li>
       <li>Computer &amp; Printer repairs &amp; upgrades.</li>
       <li>Free in store estimates.</li>
-      <li>Spyware &amp; Virus removal.</li>
-      <li>Data Recovery.</li>
+      <li><a href="#spyware">Spyware &amp; Virus Removal</a>.</li>
+      <li><a href="#data">Data Recovery</a>.</li>
       <li>PC &amp; Mac rentals.</li>
       <li><a href="#contact">Emergency</a> services.</li>
       <li>Website design &amp hosting.</li>
@@ -74,7 +74,7 @@
 
     <h2>Computer Running Slow?</h2>
     <h3>Help for your PC</h3>
-    <p>Not sure if your computer has contracted spyware or a deadly virus? If you've noticed a dramatic drop in your PC's performance, chances are it could have.</p>
+    <p>Not sure if your computer has contracted <a href="#spyware">spyware</a> or a deadly virus? If you've noticed a dramatic drop in your PC's performance, chances are it could have.</p>
     <p><strong>ACE Computer</strong> is ready to diagnose and remove any foreign programs quickly and for a very low cost. Give us a call: <a href="tel:603-669-3022">(603) 669-3022</a>.</p>
 
     <h3>Free Estimate</h3>
