yep more css tweaks

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -58,15 +58,15 @@
     <p>Here is a list of services that we can offer you and your company:</p>
 
     <ul class="about-list">
-      <li><a href="#networks">Expert network design, installation, &amp; support</a>.</li>
+      <li><a href="#networks">Expert network design, installation, &amp; support</a></li>
       <li>Computer &amp; Printer repairs &amp; upgrades.</li>
-      <li>Free in store estimates.</li>
-      <li><a href="#spyware">Spyware &amp; Virus Removal</a>.</li>
-      <li><a href="#data">Data Recovery</a>.</li>
+      <li>Free in store estimates</li>
+      <li><a href="#spyware">Spyware &amp; Virus Removal</a></li>
+      <li><a href="#data">Data Recovery</a></li>
       <li>PC &amp; Mac rentals.</li>
-      <li><a href="#contact">Emergency</a> services.</li>
-      <li>Website design &amp hosting.</li>
-      <li>We install &amp; service all Microsoft Windows platforms as well as Mac OSX.</li>
+      <li><a href="#contact">Emergency</a> services</li>
+      <li>Website design &amp hosting</li>
+      <li>We install &amp; service all Microsoft Windows platforms as well as Mac OSX</li>
     </ul>
 
     <h2>Save With On-Site Computer Repair</h2>
