--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -55,7 +55,7 @@
     <h2>What Makes ACE Computer Different?</h2>
     <p>Simple. We're local. We're right down the street. We live &amp; raise our families in the same town as you. That makes us neighbors - and we care about you &amp; your quality of life, both on the job &amp; while out enjoying our great community.</p>
     <p><strong>Ace Computer</strong> is a professional computer repair &amp; networking consulting firm located in <strong>Manchester, New Hampshire</strong>. Our highly trained staff &amp; consultants are dedicated to providing your company with excellent service &amp; support with the utmost in professionalism &amp; experience.
-    <p>Here is a list of services that we can offer you and your company:</p>
+    <p>Here's a list of services we can offer you &amp; your company:</p>
 
     <ul class="about-list">
       <li><a href="#networks">Expert network design, installation, &amp; support</a></li>
