add privacy-terms more css tweaks

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -151,9 +151,16 @@
   </section>
 
   <footer id="footer">
-    <p>&copy;2003-<span id="year"></span> <a href="#">ACE Computer</a></p>
-    <p>1271 Elm Street &nbsp;| &nbsp; Manchester, NH 03103</p>
-    <p><a href="tel:603-669-3022">(603) 669-3022</a></p>
+    <div class="footer-info">
+      <p>&copy;2003-<span id="year"></span> <a href="#">ACE Computer</a></p>
+      <p>1271 Elm Street &nbsp;| &nbsp; Manchester, NH 03103</p>
+      <p><a href="tel:603-669-3022">(603) 669-3022</a></p>
+    </div>
+
+    <div class="privacy-terms">
+      <p><a href="#">Privacy Policy</a></p>
+      <p><a href="#">Terms &amp; Conditions</a></p>
+    </div>
   </footer>
 
   <script>
