update colors - add hero img - add glyph codes

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -80,10 +80,10 @@
     <h3>Free Estimate</h3>
     <p>Before our PC specialists do anything that could cost you money, they will give you a Free In-Store estimate. Some times it's a simple solution that can help you keep your hard earned cash. Here are a few options encase things get a little more complicated.</p>
 
-    <h3><span class="pricing">49.95</span> - Virus Scan &amp; Removal</h3>
+    <h3>Virus Scan &amp; Removal: <span class="pricing">$49.95</span></h3>
     <p>If your computer has a virus, we have the tools to find &amp; remove it. Included, is our standard hardware check-up &amp; debris cleaning - both inside &amp; out. Our work is guaranteed.</p>
 
-    <h3><span class="pricing">109.95</span> - Data Wipe &amp; Rebuild</h3>
+    <h3>Data Wipe &amp; Rebuild: <span class="pricing">$109.95</span></h3>
     <p class="last">If the virus has been active in your computer for a while then chances are it's tainted many of your operating system files. When it reaches that level of contamination then a data wipe and OS restoration will be necessary. Before any rebuilding occurs we save all undamaged files to an external drive. Your system is then restored to a fresh virus free state, along with your saved files. Included is our standard hardware check-up and debris cleaning both inside and out. Did I mention we guarantee our work? 😉</p>
 
     <h2>Free In-Store Consultation &amp; Estimate</h2>
