replace site-title font

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -8,7 +8,7 @@
   <title>ACE Computer | Computer Laptop Repair Network Specialist | Manchester, NH | (603) 669-3022</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dorsa&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="header-text">
-          <h1 class="site-title">ACE Computer</h1>
+          <h1 class="site-title">A<span class="smcaps">ce</span> C<span class="smcaps">omputer</span></h1>
           <h2 class="site-description">PC Repair & Networking Specialists</h2>
           <h3 class="site-description">1271 Elm Street | Manchester, NH 03103</h3>
           <h3 class="site-description phone"><a href="tel:603-669-3022">(603) 669-3022</a></h3>
