adj resp site-title view - color palettes

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -8,8 +8,8 @@
   <title>ACE Computer | Computer Laptop Repair Network Specialist | Manchester, NH | (603) 669-3022</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Dorsa&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <link href="https://fonts.googleapis.com/css2?family=Dorsa&family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -18,12 +18,12 @@
 
     <nav id="top">
       <ul class="top-nav">
-        <li><a href="#"><span class="material-symbols-outlined">home</span></a></li>
+        <li><a title="home" href="#"><span class="material-symbols-outlined">home</span></a></li>
         <li><a href="#repair">computer repair</a></li>
         <li><a href="#spyware">spyware removal</a></li>
         <li><a href="#data">data recovery</a></li>
         <li><a href="#networks">networks</a></li>
-        <li><a href="#contact">contact</a></li>
+        <li><a title="contact us" href="#contact">contact</a></li>
       </ul>
     </nav>
 
@@ -38,7 +38,7 @@
           <h1 class="site-title">A<span class="smcaps">ce</span> C<span class="smcaps">omputer</span></h1>
           <h2 class="site-description">PC Repair & Networking Specialists</h2>
           <h3 class="site-description">1271 Elm Street | Manchester, NH 03103</h3>
-          <h3 class="site-description phone"><a href="tel:603-669-3022">(603) 669-3022</a></h3>
+          <h3 class="site-description phone"><a title="call us" href="tel:603-669-3022">(603) 669-3022</a></h3>
         </div>
 
       </div>
@@ -47,7 +47,7 @@
   </section>
 
   <section class="main">
-    <h1 id="repair" class="initial-char-limit-25">Computer &amp; Laptop Repair, Data Recovery, Spyware, Virus Removal</h1>
+    <h1 id="repair" class="initial-char-limit-25"><span class="material-symbols-outlined">vital_signs</span>Computer &amp; Laptop Repair, Data Recovery, Spyware, Virus Removal</h1>
 
     <h2 class="initial-char-limit-25">ACE Computer Manchester NH Computer Network Specialists</h2>
     <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair &amp; maintain your computers &amp; network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request &amp; dispatching a professional, friendly, qualified service technician to get you up &amp; running quickly.</p>
@@ -75,7 +75,7 @@
     <h2>Computer Running Slow?</h2>
     <h3>Help for your PC</h3>
     <p>Not sure if your computer has contracted <a href="#spyware">spyware</a> or a deadly virus? If you've noticed a dramatic drop in your PC's performance, chances are it could have.</p>
-    <p><strong>ACE Computer</strong> is ready to diagnose and remove any foreign programs quickly and for a very low cost. Give us a call: <a href="tel:603-669-3022">(603) 669-3022</a>.</p>
+    <p><strong>ACE Computer</strong> is ready to diagnose and remove any foreign programs quickly and for a very low cost. Give us a call: <a title="call us" href="tel:603-669-3022">(603) 669-3022</a>.</p>
 
     <h3>Free Estimate</h3>
     <p>Before our PC specialists do anything that could cost you money, they will give you a Free In-Store estimate. Some times it's a simple solution that can help you keep your hard earned cash. Here are a few options encase things get a little more complicated.</p>
@@ -98,7 +98,7 @@
     <p>We offer advanced data recovery services and solutions, backed by customer service &amp; support that's second to none. Our innovative tools and methods of data recovery services and solutions for failed and crashed hard drive and Server RAID recovery approaches are the most innovative.</p>
     <p>Technology professionals trust and rely on us to provide reliable solutions and expertise when it comes to their hard drive data recovery needs. Our recovery specialists and customer service staff will support and assist you with the entire recovery process.</p>
     <p>We have an in-depth understanding of most hard drive architecture, and a team of software engineers ready to develop custom solutions when needed for the most challenging recovery cases.</p>
-    <p class="last">If you have a failed, crashed, or malfunctioning hard disk drive or server RAID array, <a href="tel:603-669-3022">call our data recovery service professionals today</a> for a free consultation and to learn how our free in store evaluation service can help you to quickly &amp; completely salvage lost data.</p>
+    <p class="last">If you have a failed, crashed, or malfunctioning hard disk drive or server RAID array, <a title="call us" href="tel:603-669-3022">call our data recovery service professionals today</a> for a free consultation and to learn how our free in store evaluation service can help you to quickly &amp; completely salvage lost data.</p>
 
     <h2 id="networks" class="g-icon"><span class="material-symbols-outlined">hub</span>Computer Network Support Specialists</h2>
     <p>Our Networking and Maintenance Division can help you select from an array of new technologies and deploy them to your greatest advantage. Our technical expertise extends from complex IP data networks to advanced infrastructures incorporating wireless technologies, LAN technologies, and storage and content networks. Everything you need to seamlessly connect employees, partners and customers, increase productivity, improve network management and reduce expenses.</p>
@@ -133,14 +133,14 @@
         Saturday : 10:00AM to 12:30PM</p>
 
       <h2 class="g-icon"><span class="material-symbols-outlined">contact_support</span>Reach Out To Us</h2>
-      <p class="last">Phone: <a href="tel:603-669-3022">(603) 669-3022</a><br />
-        Emergency: <a href="tel:603-235-2752">(603) 235-2752</a><br />
+      <p class="last">Phone: <a title="call us" href="tel:603-669-3022">(603) 669-3022</a><br />
+        Emergency: <a title="emergencies only" href="tel:603-235-2752">(603) 235-2752</a><br />
         Fax: (603) 669-3420</p>
 
       <h2 class="g-icon"><span class="material-symbols-outlined">mail</span>Yes, You Can Email Us Too</h2>
-      <p class="last">Email your computer related problems &amp; questions to: <a href="mailto:blankemailfornow@email.com?subject=from ACE website &body=this is my problem...">blankemailfornow@email.com</a></p>
+      <p class="last">Email your computer related problems &amp; questions to: <a title="email us" href="mailto:blankemailfornow@email.com?subject=from ACE website &body=this is my problem...">blankemailfornow@email.com</a></p>
 
-      <h2 class="g-icon"><span class="material-symbols-outlined">credit_card</span><span class="material-symbols-outlined">paid</span>Payment Options</h2>
+      <h2 class="g-icon"><span class="material-symbols-outlined">paid</span>Payment Options</h2>
       <p class="last">We accept all major credit cards, checks &amp; cash.</p>
 
       <h2 class="g-icon"><span class="material-symbols-outlined">location_on</span>Location / Directions</h2>
@@ -152,9 +152,9 @@
 
   <footer id="footer">
     <div class="footer-info">
-      <p>&copy;2003-<span id="year"></span> <a href="#">ACE Computer</a></p>
+      <p>&copy;2003-<span id="year"></span> <a title="top of page" href="#">ACE Computer</a></p>
       <p>1271 Elm Street &nbsp;|&nbsp; Manchester, NH 03103</p>
-      <p><a href="tel:603-669-3022">(603) 669-3022</a></p>
+      <p><a title="call us" href="tel:603-669-3022">(603) 669-3022</a></p>
     </div>
 
     <div class="privacy-terms">
