delete old files

--- a/ace/index.html
+++ b/ace/index.html
@@ -8,9 +8,11 @@
   <title>ACE Computer | Laptop Repair Spyware Virus Removal Network Specialist | Manchester, NH | (603) 669-3022</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-  <link rel="stylesheet" href="src/css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Dorsa&family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/fonts.css">
+  <link rel="stylesheet" href="css/nav.css">
 </head>
 
 <body>
