under development status

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -50,7 +50,9 @@
     <h1 id="repair" class="initial-char-limit-25"><span class="material-symbols-outlined">vital_signs</span>Computer &amp; Laptop Repair, Data Recovery, Spyware, Virus Removal</h1>
 
     <h2 class="initial-char-limit-25">ACE Computer Manchester NH Computer Network Specialists</h2>
-    <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair &amp; maintain your computers &amp; network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request &amp; dispatching a professional, friendly, qualified service technician to get you up &amp; running quickly.</p>
+    <p>This is an unoffical website under development and is not intended for business purposes in any way.</p>
+
+    <p class="last">With <strong>ACE Computer</strong> on your team, it's like having your own in-house IT personnel to repair &amp; maintain your computers &amp; network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request &amp; dispatching a professional, friendly, qualified service technician to get you up &amp; running quickly.</p>
 
     <h2>What Makes ACE Computer Different?</h2>
     <p>Simple. We're local. We're right down the street. We live &amp; raise our families in the same town as you. That makes us neighbors - and we care about you &amp; your quality of life, both on the job &amp; while out enjoying our great community.</p>
