update page anchors - css tweaks

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -127,8 +127,7 @@
     <p>While we're at your office(s), we can also study your existing computer systems, consult with you to find out what your company needs to function efficiently, and deliver a proposal &amp; estimate designed to improve your system (if required) based upon what is needed for your specific needs.</p>
     <p>Find out about our Proactive Service &amp; Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in their proper running condition.</p>
 
-    <!-- PAGE ANCHORS (ALL) - CSS TO ACCOMODATE RESPONSIVE NAV HEIGHT -->
-    <span id="contact">&nbsp;</span>
+    <span id="contact">&nbsp;</span><!-- anchor -->
     <div class="main-bottom">
       <h2 class="g-icon"><span class="material-symbols-outlined">schedule</span>Office Hours</h2>
       <p class="last">Monday - Friday : 8:30AM to 5:30PM<br />
