add html comments - remove ACE folder

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <section id="site-header">
+  <header id="site-header">
 
     <nav id="top">
       <ul class="top-nav">
@@ -24,38 +24,41 @@
         <li><a href="#data">data recovery</a></li>
         <li><a href="#networks">networks</a></li>
         <li><a title="contact us" href="#contact">contact</a></li>
-      </ul>
-    </nav>
+      </ul><!-- END top-nav -->
+    </nav><!-- END nav -->
 
     <section class="hero-container">
       <div class="overlay">
 
         <div id="logo">
           <img src="img/ace-logo.png" alt="">
-        </div>
+        </div><!-- END logo -->
 
         <div class="header-text">
           <h1 class="site-title">A<span class="smcaps">ce</span> C<span class="smcaps">omputer</span></h1>
           <h2 class="site-description">PC Repair & Networking Specialists</h2>
           <h3 class="site-description">1271 Elm Street | Manchester, NH 03103</h3>
           <h3 class="site-description phone"><a title="call us" href="tel:603-669-3022">(603) 669-3022</a></h3>
-        </div>
+        </div><!-- END header-text -->
 
-      </div>
-    </section>
+      </div><!-- END overlay -->
+    </section><!-- END hero-container -->
 
-  </section>
+  </header><!-- END header -->
 
   <section class="main">
     <h1 id="repair" class="initial-char-limit-25"><span class="material-symbols-outlined">vital_signs</span>Computer &amp; Laptop Repair, Data Recovery, Spyware, Virus Removal</h1>
 
     <h2 class="initial-char-limit-25">ACE Computer Manchester NH Computer Network Specialists</h2>
+
     <p>This is an unoffical website under development and is not intended for business purposes in any way.</p>
 
     <p class="last">With <strong>ACE Computer</strong> on your team, it's like having your own in-house IT personnel to repair &amp; maintain your computers &amp; network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request &amp; dispatching a professional, friendly, qualified service technician to get you up &amp; running quickly.</p>
 
     <h2>What Makes ACE Computer Different?</h2>
+
     <p>Simple. We're local. We're right down the street. We live &amp; raise our families in the same town as you. That makes us neighbors - and we care about you &amp; your quality of life, both on the job &amp; while out enjoying our great community.</p>
+
     <p><strong>Ace Computer</strong> is a professional computer repair &amp; networking consulting firm located in <strong>Manchester, New Hampshire</strong>. Our highly trained staff &amp; consultants are dedicated to providing your company with excellent service &amp; support with the utmost in professionalism &amp; experience.
     <p>Here's a list of services we can offer you &amp; your company:</p>
 
@@ -69,13 +72,16 @@
       <li><a href="#contact">Emergency</a> services</li>
       <li>Website design &amp hosting</li>
       <li>We install &amp; service all Microsoft Windows platforms as well as Mac OSX</li>
-    </ul>
+    </ul><!-- END about-list -->
 
     <h2>Save With On-Site Computer Repair</h2>
+
     <p class="last">No need to hire full-time IT “Information Technology” computer staff. <strong>ACE Computer</strong> on-site computer repair means that we come to your office to repair your computers - no need to waste your employees valuable work time in carting computer equipment to repair shops. Our on-site computer repair is the fastest way to get your computers or computer network repaired.</p>
 
     <h2>Computer Running Slow?</h2>
+
     <h3>Help for your PC</h3>
+
     <p>Not sure if your computer has contracted <a href="#spyware">spyware</a> or a deadly virus? If you've noticed a dramatic drop in your PC's performance, chances are it could have.</p>
     <p><strong>ACE Computer</strong> is ready to diagnose and remove any foreign programs quickly and for a very low cost. Give us a call: <a title="call us" href="tel:603-669-3022">(603) 669-3022</a>.</p>
 
@@ -86,87 +92,108 @@
     <p>If your computer has a virus, we have the tools to find &amp; remove it. Included, is our standard hardware check-up &amp; debris cleaning - both inside &amp; out. Our work is guaranteed.</p>
 
     <h3>Data Wipe &amp; Rebuild: <span class="pricing">$109.95</span></h3>
+
     <p class="last">If the virus has been active in your computer for a while then chances are it's tainted many of your operating system files. When it reaches that level of contamination then a data wipe and OS restoration will be necessary. Before any rebuilding occurs we save all undamaged files to an external drive. Your system is then restored to a fresh virus free state, along with your saved files. Included is our standard hardware check-up and debris cleaning both inside and out. Did I mention we guarantee our work? 😉</p>
 
     <h2>Free In-Store Consultation &amp; Estimate</h2>
+
     <p class="last">That's right. Your in-store consultation is free. Our technicians have an average of 10+ years of experience in the computer repair field, and can sort out your computer problems so that they're working as needed.</p>
 
     <h2 id="spyware" class="g-icon"><span class="material-symbols-outlined">bug_report</span>Spyware Removal</h2>
+
     <p>It is important to keep your computer data safe &amp; secure. Having up to date Virus Protection Software is one of the most important responsibilities of safe, trouble free computing. Without virus protection, viruses can destroy data, disclose data, replicate itself to friends, and render your computer unusable.</p>
     <p>If you suspect your computer system is infected with a virus and you have virus protection software installed, it is recommended that you update that software and run a full system scan. If your system has a virus and you can't get rid of it, our technicians can remove it and restore any files needed to get your system up and running.</p>
     <p class="last">We also sell &amp; install the latest Virus Protection Software.</p>
 
     <h2 id="data" class="g-icon"><span class="material-symbols-outlined">database</span>Data Recovery</h2>
+
     <p>We offer advanced data recovery services and solutions, backed by customer service &amp; support that's second to none. Our innovative tools and methods of data recovery services and solutions for failed and crashed hard drive and Server RAID recovery approaches are the most innovative.</p>
     <p>Technology professionals trust and rely on us to provide reliable solutions and expertise when it comes to their hard drive data recovery needs. Our recovery specialists and customer service staff will support and assist you with the entire recovery process.</p>
     <p>We have an in-depth understanding of most hard drive architecture, and a team of software engineers ready to develop custom solutions when needed for the most challenging recovery cases.</p>
     <p class="last">If you have a failed, crashed, or malfunctioning hard disk drive or server RAID array, <a title="call us" href="tel:603-669-3022">call our data recovery service professionals today</a> for a free consultation and to learn how our free in store evaluation service can help you to quickly &amp; completely salvage lost data.</p>
 
     <h2 id="networks" class="g-icon"><span class="material-symbols-outlined">hub</span>Computer Network Support Specialists</h2>
+
     <p>Our Networking and Maintenance Division can help you select from an array of new technologies and deploy them to your greatest advantage. Our technical expertise extends from complex IP data networks to advanced infrastructures incorporating wireless technologies, LAN technologies, and storage and content networks. Everything you need to seamlessly connect employees, partners and customers, increase productivity, improve network management and reduce expenses.</p>
 
     <h3>Computer Network Infrastructure</h3>
+
     <p>Improve the performance and resiliency of your existing network while reducing overall costs.</p>
 
     <h3>Network Baseline Assessment</h3>
+
     <p>Evaluates overall network performance to pinpoint areas for enhancement and improved resource utilization.</p>
 
     <h3>Network Architecture Design</h3>
+
     <p>Focuses on determining the optimal infrastructure design to meet your business requirements.</p>
 
     <h3>Network Implementation</h3>
+
     <p>Focuses on integrating new networking systems without disrupting your ongoing business operations.</p>
 
     <h3>Wireless Networks</h3>
+
     <p>Increase network flexibility, productivity and cost-effectiveness with the latest wireless protocols: IEEE 802.11 protocol, RF engineering and spectrum allocation, large-scale wireless network design, and wireless security architecture.</p>
 
     <h3>Storage & Content Networking</h3>
+
     <p class="last">Develop a storage strategy and content network architecture to meet your business needs and reduce the stress on your storage servers and network.</p>
 
     <h2>Computer Upgrades &amp; Maintenance</h2>
+
     <p>While we're at your office(s), we can also study your existing computer systems, consult with you to find out what your company needs to function efficiently, and deliver a proposal &amp; estimate designed to improve your system (if required) based upon what is needed for your specific needs.</p>
     <p>Find out about our Proactive Service &amp; Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in their proper running condition.</p>
 
     <span id="contact">&nbsp;</span><!-- anchor -->
+
     <div class="main-bottom">
       <h2 class="g-icon"><span class="material-symbols-outlined">schedule</span>Office Hours</h2>
+
       <p class="last">Monday - Friday : 8:30AM to 5:30PM<br />
         Saturday : 10:00AM to 12:30PM</p>
 
       <h2 class="g-icon"><span class="material-symbols-outlined">contact_support</span>Reach Out To Us</h2>
+
       <p class="last">Phone: <a title="call us" href="tel:603-669-3022">(603) 669-3022</a><br />
         Emergency: <a title="emergencies only" href="tel:603-235-2752">(603) 235-2752</a><br />
         Fax: (603) 669-3420</p>
 
       <h2 class="g-icon"><span class="material-symbols-outlined">mail</span>Yes, You Can Email Us Too</h2>
+
       <p class="last">Email your computer related problems &amp; questions to: <a title="email us" href="mailto:blankemailfornow@email.com?subject=from ACE website &body=this is my problem...">blankemailfornow@email.com</a></p>
 
       <h2 class="g-icon"><span class="material-symbols-outlined">paid</span>Payment Options</h2>
+
       <p class="last">We accept all major credit cards, checks &amp; cash.</p>
 
       <h2 class="g-icon"><span class="material-symbols-outlined">location_on</span>Location / Directions</h2>
+
       <p>1271 Elm Street<br />
         Manchester, NH 03103</p>
       <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-  </section>
+
+    </div><!-- END main-bottom -->
+  </section><!-- END main -->
 
   <footer id="footer">
+
     <div class="footer-info">
       <p>&copy;2003-<span id="year"></span> <a title="top of page" href="#">ACE Computer</a></p>
       <p>1271 Elm Street &nbsp;|&nbsp; Manchester, NH 03103</p>
       <p><a title="call us" href="tel:603-669-3022">(603) 669-3022</a></p>
-    </div>
+    </div><!-- END footer-info -->
 
     <div class="privacy-terms">
       <p><a href="#">Privacy Policy</a></p>
       <p><a href="#">Terms &amp; Conditions</a></p>
-    </div>
-  </footer>
+    </div><!-- END privacy-terms -->
+
+  </footer><!-- END footer -->
 
   <script>
     document.getElementById("year").innerHTML = new Date().getFullYear();
   </script>
-</body>
+</body><!-- END body -->
 
 </html>
