html page head tweaks

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="ACE Computer is a PC / laptop repair &amp; network consulting firm located in Manchester, New Hampshire">
+  <meta name="robots" content="noindex">
   <title>ACE Computer | Computer Laptop Repair Network Specialist | Manchester, NH | (603) 669-3022</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
